# RedClaw

./: .gitignore  CLAUDE.md  CLAW.md  Dockerfile  README.md  build.py  docker-compose.yml  install.bat  install.sh  pyproject.toml  redclaw.spec  requirements.txt  send_tts_telegram.py  speak.py  speak_simple.py  test_all.py  tts_reply_bot.py  uninstall.bat
.github/workflows/: ci.yml
docs/: guide.html  llm-wiki-spec.md
docs/experiments/: results_a.json  results_a_part2.json  results_d.json  results_d_part2.json  self_learning_ablation.md
docs/promotion/: crypt_deepdive.md  glm_comment.md  reddit_localllama.md  show_hn_final.md  show_hn_post.md  swebench_results_post.md
experiments/018_ground_truth/: experiment.py  notes.md  results.json
godot/: icon.svg.import  project.godot
godot/assets/: redclaw.jpg.import
godot/scripts/: agent_bridge.gd  main.gd  session_manager.gd  settings.gd  sim_controller.gd
godot/themes/: dark_theme.tres
godot/ui/: chat_panel.gd  chat_panel.tscn  ide_layout.tscn  message_item.gd  message_item.tscn  settings_dialog.gd  settings_dialog.tscn  sidebar.gd  sidebar.tscn  sim_panel.gd  status_bar.gd  tool_panel.gd  tool_panel.tscn  wiki_panel.gd  wiki_panel.tscn
installer/: redclaw.iss
redclaw/: __init__.py  __main__.py  cli.py  dashboard.py  mcp_client.py  rpc.py  telegram_bot.py  updater.py  webchat.py
redclaw/api/: client.py  providers.py  sse.py  types.py
redclaw/assistant/: __init__.py  briefing.py  config.py  notes.py  reminders.py  scheduler.py  tasks.py
redclaw/channels/: __init__.py  base.py  telegram.py
redclaw/crypt/: __init__.py  crypt.py  dna.py  dream.py  extractor.py  karma.py  metrics.py
redclaw/memory_graph/: __init__.py  manager.py  tools.py
redclaw/runtime/: autonomous.py  compact.py  context_budget.py  conversation.py  event_bus.py  hooks.py  local_llm.py  permissions.py  prompt.py  session.py  soul.py  subagent.py  subagent_types.py  token_saver.py  usage.py
redclaw/sim/: __init__.py  engine.py  runner.py  tools.py  types.py
redclaw/skills/: __init__.py  agent_tools.py  base.py  loader.py  security.py
redclaw/tools/: agi_tools.py  assistant_tools.py  bash.py  content_scan.py  file_ops.py  memory.py  registry.py  search.py  toolsets.py
redclaw/training/: __init__.py  binary_model.py  bitnet_lora.py  encode.py  export_bitnet.py  export_dataset.py  generate_dataset.py  prepare_bitnet_data.py  self_learner.py  train_bitnet.py  train_predictor.py  workflows.py
redclaw/wiki/: manager.py  tools.py  types.py
scripts/: analyze_experiment.py  ingest_godot_docs.py  prepare_experiment.sh  run_swebench.py
servers/: start_all.py  stt_server.py  tts_server.py  web_reader_server.py
skills/swebench/: SKILL.md
skills/weather/: skill.yaml  weather.py
tests/: test_sim.py
training_data/: dataset.jsonl  predictor.pt  sequences.jsonl  synthetic_instructions.jsonl
