[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redclaw"
version = "0.2.0"
description = "RedClaw — a minimal AI coding agent with Telegram, WebChat, and skills"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "edge-tts>=7.0",
    "openai-whisper>=20231117",
    "fastmcp>=3.0",
    "html2text>=2024.2",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
redclaw = "redclaw.__main__:main"

[tool.setuptools.packages.find]
include = ["redclaw*"]
