[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redclaw"
version = "0.3.0"
description = "RedClaw — the self-learning AI agent that kills drudgery. SOUL constitution, DNA evolution, dream synthesis, meeseek subagents, 6 interfaces, any LLM provider."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "edge-tts>=7.0",
    "openai-whisper>=20231117",
    "fastmcp>=3.0",
    "html2text>=2024.2",
    "playwright>=1.40",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
cognee = [
    "cognee>=0.4",
]

[project.scripts]
redclaw = "redclaw.__main__:main"

[tool.setuptools.packages.find]
include = ["redclaw*"]
