[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redclaw"
version = "0.3.0"
description = "RedClaw — the self-learning AI agent that kills drudgery. SOUL constitution, DNA evolution, dream synthesis, meeseek subagents, 6 interfaces, any LLM provider."
authors = [
    {name = "slothitude"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13",
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "edge-tts>=7.0",
    "fastmcp>=3.0",
    "html2text>=2024.2",
    "flask>=3.0",
]

[project.optional-dependencies]
voice = [
    "openai-whisper>=20231117",
    "playwright>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
cognee = [
    "cognee>=0.4",
]
all = [
    "redclaw[voice,dev,cognee]",
]

[project.scripts]
redclaw = "redclaw.__main__:main"

[tool.setuptools.packages.find]
include = ["redclaw*"]
